CactusParser.java
// Generated from Cactus.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CactusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, ASSIGN=2, BEGIN=3, END=4, VAR=5, SET=6, IF=7, THEN=8, ENDIF=9, 
		ELSE=10, WHILE=11, DO=12, ENDWHILE=13, READ=14, WRITE=15, EXIT=16, OR=17, 
		AND=18, NOT=19, EQUAL=20, INSIDE=21, MORETHAN=22, MORETHANEQUAL=23, LESSTHAN=24, 
		LESSTHANEQUAL=25, ADD=26, MINUS=27, MULTIPLICATION=28, DIVISION=29, MOD=30, 
		INTCONST=31, LEFTBRACKET=32, RIGHTBRACKET=33, ID=34, WHITESPACE=35, COMMENT=36;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_declarations_E = 2, RULE_statements = 3, 
		RULE_statements_E = 4, RULE_statement = 5, RULE_booleanExpression = 6, 
		RULE_booleanExpression_E = 7, RULE_booleanTerm = 8, RULE_booleanTerm_E = 9, 
		RULE_booleanFactor = 10, RULE_relationExpression = 11, RULE_arithmeticExpression = 12, 
		RULE_arithmeticExpression_E = 13, RULE_arithmeticTerm = 14, RULE_arithmeticTerm_E = 15, 
		RULE_arithmeticFactor = 16, RULE_primaryExpression = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "declarations_E", "statements", "statements_E", 
			"statement", "booleanExpression", "booleanExpression_E", "booleanTerm", 
			"booleanTerm_E", "booleanFactor", "relationExpression", "arithmeticExpression", 
			"arithmeticExpression_E", "arithmeticTerm", "arithmeticTerm_E", "arithmeticFactor", 
			"primaryExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Program'", "'='", "'Begin'", "'End'", "'Var'", "'Set'", "'If'", 
			"'Then'", "'EndIf'", "'Else'", "'While'", "'Do'", "'EndWhile'", "'Read'", 
			"'Write'", "'Exit'", "'Or'", "'And'", "'Not'", "'=='", "'<>'", "'>'", 
			"'>='", "'<'", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", null, "'('", 
			"')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "ASSIGN", "BEGIN", "END", "VAR", "SET", "IF", "THEN", 
			"ENDIF", "ELSE", "WHILE", "DO", "ENDWHILE", "READ", "WRITE", "EXIT", 
			"OR", "AND", "NOT", "EQUAL", "INSIDE", "MORETHAN", "MORETHANEQUAL", "LESSTHAN", 
			"LESSTHANEQUAL", "ADD", "MINUS", "MULTIPLICATION", "DIVISION", "MOD", 
			"INTCONST", "LEFTBRACKET", "RIGHTBRACKET", "ID", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cactus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CactusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(CactusParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode BEGIN() { return getToken(CactusParser.BEGIN, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode END() { return getToken(CactusParser.END, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(PROGRAM);
			setState(37);
			match(ID);
			setState(38);
			match(BEGIN);

					System.out.println("\t.data");
				
			setState(40);
			declarations();

					System.out.println("\t.text");
					System.out.println("main:");
				
			setState(42);
			statements(0 , 1);
			setState(43);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public Declarations_EContext declarations_E() {
			return getRuleContext(Declarations_EContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			declarations_E();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarations_EContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode VAR() { return getToken(CactusParser.VAR, 0); }
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public Declarations_EContext declarations_E() {
			return getRuleContext(Declarations_EContext.class,0);
		}
		public Declarations_EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations_E; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterDeclarations_E(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitDeclarations_E(this);
		}
	}

	public final Declarations_EContext declarations_E() throws RecognitionException {
		Declarations_EContext _localctx = new Declarations_EContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarations_E);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				match(VAR);
				setState(48);
				((Declarations_EContext)_localctx).ID = match(ID);
				 
						System.out.println((((Declarations_EContext)_localctx).ID!=null?((Declarations_EContext)_localctx).ID.getText():null) + ":\t.word\t0");
					
				setState(50);
				declarations_E();
				}
				break;
			case END:
			case SET:
			case IF:
			case WHILE:
			case READ:
			case WRITE:
			case EXIT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Statements_EContext statements_E() {
			return getRuleContext(Statements_EContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementsContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements(int reg,int label) throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 6, RULE_statements);
		try {
			enterOuterAlt(_localctx, 1);
			{

					((StatementsContext)_localctx).nreg =  _localctx.reg;
					((StatementsContext)_localctx).nlabel =  _localctx.label;
				
			setState(55);
			statements_E(_localctx.reg , _localctx.label);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statements_EContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public StatementContext statement;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Statements_EContext statements_E() {
			return getRuleContext(Statements_EContext.class,0);
		}
		public Statements_EContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Statements_EContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements_E; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatements_E(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatements_E(this);
		}
	}

	public final Statements_EContext statements_E(int reg,int label) throws RecognitionException {
		Statements_EContext _localctx = new Statements_EContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 8, RULE_statements_E);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
			case IF:
			case WHILE:
			case READ:
			case WRITE:
			case EXIT:
				enterOuterAlt(_localctx, 1);
				{

						((Statements_EContext)_localctx).nreg =  _localctx.reg;
						((Statements_EContext)_localctx).nlabel =  _localctx.label;
					
				setState(58);
				((Statements_EContext)_localctx).statement = statement(_localctx.reg , _localctx.label);

						((Statements_EContext)_localctx).label =  ((Statements_EContext)_localctx).statement.nlabel;
					
				setState(60);
				statements_E(_localctx.reg , _localctx.label);
				}
				break;
			case END:
			case ENDIF:
			case ELSE:
			case ENDWHILE:
				enterOuterAlt(_localctx, 2);
				{

						((Statements_EContext)_localctx).nreg =  _localctx.reg;
						((Statements_EContext)_localctx).nlabel =  _localctx.label;
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Token ID;
		public ArithmeticExpressionContext arithmeticExpression;
		public BooleanExpressionContext booleanExpression;
		public StatementsContext statements;
		public TerminalNode SET() { return getToken(CactusParser.SET, 0); }
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(CactusParser.ASSIGN, 0); }
		public ArithmeticExpressionContext arithmeticExpression() {
			return getRuleContext(ArithmeticExpressionContext.class,0);
		}
		public TerminalNode IF() { return getToken(CactusParser.IF, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(CactusParser.THEN, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode ENDIF() { return getToken(CactusParser.ENDIF, 0); }
		public TerminalNode ELSE() { return getToken(CactusParser.ELSE, 0); }
		public TerminalNode WHILE() { return getToken(CactusParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(CactusParser.DO, 0); }
		public TerminalNode ENDWHILE() { return getToken(CactusParser.ENDWHILE, 0); }
		public TerminalNode READ() { return getToken(CactusParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(CactusParser.WRITE, 0); }
		public TerminalNode EXIT() { return getToken(CactusParser.EXIT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement(int reg,int label) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{

						((StatementContext)_localctx).nreg =  _localctx.reg;
					
				setState(66);
				match(SET);
				setState(67);
				((StatementContext)_localctx).ID = match(ID);
				setState(68);
				match(ASSIGN);
				setState(69);
				((StatementContext)_localctx).arithmeticExpression = arithmeticExpression(_localctx.reg);

						((StatementContext)_localctx).reg =  ((StatementContext)_localctx).arithmeticExpression.nreg;
						System.out.println("\tla\t$t" + (_localctx.reg) + ",\t" + (((StatementContext)_localctx).ID!=null?((StatementContext)_localctx).ID.getText():null));
						System.out.println("\tsw\t$t" + (_localctx.reg - 1) + ",\t0($t" + (_localctx.reg) + ")");
						((StatementContext)_localctx).nlabel =  _localctx.label;
					
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{

						((StatementContext)_localctx).nreg =  _localctx.reg;
						int t = _localctx.label++;
						int f = _localctx.label++;
						int end = _localctx.label++;
					
				setState(73);
				match(IF);
				setState(74);
				((StatementContext)_localctx).booleanExpression = booleanExpression(_localctx.reg , _localctx.label , t , f);

						System.out.println("L" + t + ":");
						((StatementContext)_localctx).label =  ((StatementContext)_localctx).booleanExpression.nlabel;
					
				setState(76);
				match(THEN);
				setState(77);
				((StatementContext)_localctx).statements = statements(_localctx.reg , _localctx.label);
				setState(78);
				match(ENDIF);

						System.out.println("L" + f + ":");
						((StatementContext)_localctx).nlabel =  ((StatementContext)_localctx).statements.nlabel;
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{

						((StatementContext)_localctx).nreg =  _localctx.reg;
						int t = _localctx.label++;
						int f = _localctx.label++;
						int end = _localctx.label++;
					
				setState(82);
				match(IF);
				setState(83);
				((StatementContext)_localctx).booleanExpression = booleanExpression(_localctx.reg , _localctx.label , t , f);

						System.out.println("L" + t + ":");
						((StatementContext)_localctx).label =  ((StatementContext)_localctx).booleanExpression.nlabel;
					
				setState(85);
				match(THEN);
				setState(86);
				((StatementContext)_localctx).statements = statements(_localctx.reg , _localctx.label);

						System.out.println("\tb\tL" + end);
						System.out.println("L" + f + ":");
						((StatementContext)_localctx).label =  ((StatementContext)_localctx).statements.nlabel;
					
				setState(88);
				match(ELSE);
				setState(89);
				((StatementContext)_localctx).statements = statements(_localctx.reg , _localctx.label);
				setState(90);
				match(ENDIF);

						System.out.println("L" + end + ":");
						((StatementContext)_localctx).nlabel =  ((StatementContext)_localctx).statements.nlabel;
					
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{

						((StatementContext)_localctx).nreg =  _localctx.reg;
						int begin = _localctx.label++;
						int t = _localctx.label++;
						int f = _localctx.label++;
						System.out.println("L" + begin + ":");
					
				setState(94);
				match(WHILE);
				setState(95);
				((StatementContext)_localctx).booleanExpression = booleanExpression(_localctx.reg , _localctx.label , t , f);
